# QQBot-for-study-

./: .env  .env.example  .gitignore  COMMANDS.md  README.md  START_HERE.md  TROUBLESHOOTING.md  bot.py  botstart.bat  pyproject.toml  requirements.txt  start.bat  start.bat - 快捷方式.lnk
src/plugins/bilibili_downloader/: README.md  __init__.py  config.py  utils.py
src/plugins/mars_ai/: __init__.py
